to solve the issue of timeline button alignment

--- a/common/common.scss
+++ b/common/common.scss
@@ -10,3 +10,8 @@
     }
   }
 }
+
+/* Binjan; 2023/06/27; to solve the issue of timeline button alignment */
+.timeline-footer-controls {
+  max-width: 9em;
+}
